# web-scraper

./: README.md
websites/alibaba-scraper/: QUICKSTART.md  README.md  alibaba.py  pyproject.toml  run.py  test.py
websites/alibaba-scraper/seatgeek-scraper/: README.md  config.example.json  proxies.txt.example  seatgeek.py
websites/amazon-scraper/: QUICKSTART.md  README.md  amazon_scraper.py  requirements.txt  run.py  settings.py  test_scraper.py  utils.py
websites/amazon-scraper/results/: product_details.json  product_reviews.json  search_results.json
websites/booking.com/: README.md  pyproject (2).toml  run (2).py
websites/booking.com-scraper/: booking.py  test.py
websites/ebay-scraper/: READMD.md  ebay.py  pyproject.toml  run.py  test.py
websites/ebay-scraper/output/: ebay_example_output.json
websites/producthunt-scraper/: QUICKSTART.md  README.md  daily_products.json  producthunt.py  pyproject.toml  run.py  test.py
websites/producthunt-scraper/results/: archive_products.json  product_details.json  search_results.json
websites/seatgeek-scraper/: QUICKSTART (1).md  pyproject (1).toml  run.py  test (1).py
websites/trustpilot-scraper/: README.md  example.py  pyproject.toml  run.py  test.py  trustpilot.py
