[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebay-scraper"
version = "1.0.0"
description = "eBay web scraper with proxy support - part of Roundproxies.com web scraper collection"
authors = [
    {name = "Roundproxies", email = "support@roundproxies.com"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ebay", "scraper", "web-scraping", "proxy", "roundproxies"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/carlsfert/web-scraper/tree/main/websites/ebay-scraper"
Documentation = "https://github.com/carlsfert/web-scraper/tree/main/websites/ebay-scraper#readme"
Repository = "https://github.com/carlsfert/web-scraper"
"Bug Reports" = "https://github.com/carlsfert/web-scraper/issues"
"Roundproxies" = "https://roundproxies.com"

[project.scripts]
ebay-scraper = "run:main"

[tool.setuptools]
packages = ["ebay"]

[tool.setuptools.package-data]
ebay = ["*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["test.py"]
python_files = ["test.py", "test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ebay --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
